package structural.decorator.BieuThuc;

public abstract class BieuThuc {
    public abstract float giaTri();
    public abstract String bieuThuc();
}
